corpus/states-and-transitions-simple.txt
===
two states and two transitions
===
on,
off;

on => off;
off => on;

---

(state_machine
    (states
        (state
            (state_identifier)
        )
        (comma)
        (state
            (state_identifier)
        )
        (semicolon)
    )
    (transitions
        (transition
            (state_identifier)
            (arrow)
            (state_identifier)
        )
        (semicolon)
        (transition
            (state_identifier)
            (arrow)
            (state_identifier)
        )
        (semicolon)
    )
)
