corpus/states-decorated.txt
===
one state - empty standard attributes
===
on:;

---

(state_machine
    (states
        (state
            (state_identifier)
            (actions
                (colon)
            )
        )
        (semicolon)
    )
)

===
one state - standard attributes TODO - unquoted here
===
on: "onentry/ lights on";

---

(state_machine
    (states
        (state
            (state_identifier)
            (actions
                (colon)
                (string)
            )
        )
        (semicolon)
    )
)

===
one state - standard attributes; quoted
===
on: "onentry/ lights off, spot on";

---

(state_machine
    (states
        (state
            (state_identifier)
            (actions
                (colon)
                (string)
            )
        )
        (semicolon)
    )
)

===
one state - empty extended attributes
===
on [];

---

(state_machine
    (states
        (state
            (state_identifier)
            (extended_state_attributes
                (square_bracket_open)
                (square_bracket_close)
            )
        )
        (semicolon)
    )
)

===
one state - extended attribute
===
on [active];

---

(state_machine
    (states
        (state
            (state_identifier)
            (extended_state_attributes
                (square_bracket_open)
                (extended_state_key)
                (square_bracket_close)
            )
            
        )
        (semicolon)
    )
)

===
one state - key-value extended attribute
===
on [color="red"];

---

(state_machine
    (states
        (state
            (state_identifier)
            (extended_state_attributes
                (square_bracket_open)
                (extended_state_key)
                (equals)
                (extended_state_value)
                (square_bracket_close)
            )
        )
        (semicolon)
    )
)

===
one state - extended and standard attributes
===
on [color="green" label="Its On!!" active]: "onentry/ lights on";

---

(state_machine
    (states
        (state
            (state_identifier)
            (extended_state_attributes
                (square_bracket_open)
                (extended_state_key)
                (equals)
                (extended_state_value)
                (extended_state_key)
                (equals)
                (extended_state_value)
                (extended_state_key)
                (square_bracket_close)
            )
            (actions
                (colon)
                (string)
            )
        )
        (semicolon)
    )
)
