corpus/states-simple.txt
===
one state
===
on;

---

(state_machine
    (states
        (state
            (state_identifier)
        )
        (semicolon)
    )
)

===
two states
===
on,
off;

---

(state_machine
    (states
        (state
            (state_identifier)
        )
        (comma)
        (state
            (state_identifier)
        )
        (semicolon)
    )
)

===
three states
===
on,
off,
standby;

---

(state_machine
    (states
        (state
            (state_identifier)
        )
        (comma)
        (state
            (state_identifier)
        )
        (comma)
        (state
            (state_identifier)
        )
        (semicolon)
    )
)

===
state defined as a string
===

"this is state as a string";

---

(state_machine
    (states
        (state
            (state_identifier)
        )
        (semicolon)
    )
)

===
states defined as a string and states defined as an identifier
===

"lamp on",
"lamp off",
standby;
---

(state_machine
    (states
        (state
            (state_identifier)
        )
        (comma)
        (state
            (state_identifier)
        )
        (comma)
        (state
            (state_identifier)
        )
        (semicolon)
    )
)
