corpus/transitions-decorated.txt
===
one transition with empty attributes
===
a => b [];

---

(state_machine
    (transitions
        (transition
            (state_identifier)
            (arrow)
            (state_identifier)
            (extended_transition_attributes
                (square_bracket_open)
                (square_bracket_close)
            )
        )
        (semicolon)
    )
)

===
one transition with a color attribute
===
a => b [color="red"];

---

(state_machine
    (transitions
        (transition
            (state_identifier)
            (arrow)
            (state_identifier)
            (extended_transition_attributes
                (square_bracket_open)
                    (extended_transition_key)
                    (equals)
                    (extended_transition_value)
                (square_bracket_close)
            )
        )
        (semicolon)
    )
)


===
one transition with two color attributes (weird but legal)
===
a => b [color="red" color="blue"];

---

(state_machine
    (transitions
        (transition
            (state_identifier)
            (arrow)
            (state_identifier)
            (extended_transition_attributes
                (square_bracket_open)
                    (extended_transition_key)
                    (equals)
                    (extended_transition_value)
                    (extended_transition_key)
                    (equals)
                    (extended_transition_value)
                (square_bracket_close)
            )
        )
        (semicolon)
    )
)


===
one transition with a label attribute - TODO: make unquoted
===
a => b: "this is a label";

---

(state_machine
    (transitions
        (transition
            (state_identifier)
            (arrow)
            (state_identifier)
            (label
                (colon)
                (string)
            )
        )
        (semicolon)
    )
)


===
one transition with a quoted label attribute
===
a => b: "this, is a quoted label";

---

(state_machine
    (transitions
        (transition
            (state_identifier)
            (arrow)
            (state_identifier)
            (label
                (colon)
                (string)
            )
        )
        (semicolon)
    )
)

===
one transition with a color and a label attribute
===
a => b [color="green"]: "this is a label";

---

(state_machine
    (transitions
        (transition
            (state_identifier)
            (arrow)
            (state_identifier)
            (extended_transition_attributes
                (square_bracket_open)
                    (extended_transition_key)
                    (equals)
                    (extended_transition_value)
                (square_bracket_close)
            )
            (label
                (colon)
                (string)
            )
        )
        (semicolon)
    )
)
